# Kraken

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Kraken REST API.postman_collection.json  Makefile  README.md  alembic.ini  api_authentication.py  pre_commit_hook.sh  pyproject.toml  pytest.ini
alembic/: README  env.py
alembic/versions/: 1b1606845f09_.py  caa659a569b5_initial_migration.py  e019e253372c_.py
import_data/scripts/: import_OHLCVT.py
import_data/scripts/common/: error_manager.py
krakenfx/: main.py
krakenfx/api/models/: __init__.py  assetsPairsModel.py  modelsImporter.py  tradeHistoryModel.py
krakenfx/api/schemas/: __init__.py  assetsPairsSchemas.py  balanceSchemas.py  openPositionSchemas.py  tradeVolumeSchemas.py  tradehistorySchemas.py
krakenfx/core/: __init__.py  config.py  database.py
krakenfx/di/: app_container.py  config_container.py  database_container.py  logger_container.py
krakenfx/repository/: storeAssetsPairs.py  storeBalance.py  storeLedgers.py  storeOpenPositions.py  storeOrders.py  storeTradeBalance.py  storeTradeHistory.py
krakenfx/repository/Archive/: fetch_openOrders.py
krakenfx/repository/models/: OrderModel.py  __init__.py  assetsPairsModel.py  associationsTablesModel.py  balanceModel.py  ledgerModel.py  ohlcModel.py  openPositionModel.py  tradeBalanceModel.py  tradeHistoryModel.py  tradesModel.py
krakenfx/scripts/: database_inspection.py  display_tables_base.py
krakenfx/services/Archive/: openOrderService.py
krakenfx/services/account_data/: OrderService.py  balanceService.py  ledgerService.py  openPositionService.py  queryLedgersService.py  queryOrdersService.py  queryTradesService.py  tradeBalanceService.py  tradeVolumeService.py  tradesHistoryService.py
krakenfx/services/spot_market_data/: getAssetsPairsService.py  getAssetsService.py  getDepthService.py  getSpreadsService.py  getSystemStatusService.py  getTickerService.py  (+2 more)
krakenfx/utils/: config.py  database.py  errors.py  logger.py  logger_ng.py  user_utils.py  utils.py  validations.py
(+65 files in other folders)
