[tool.poetry]
name = "krakenfx"
version = "0.1.0"
description = ""
authors = ["Olivier Contant <contant.olivier@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.2"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
httpx = "^0.27.0"
apscheduler = "^3.10.4"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.2.1"
greenlet = "^3.0.3"
coloredlogs = "^15.0.1"
pytz = "^2024.1"
dependency-injector = "^4.41.0"
pylint-quotes = "^0.2.3"
pylint-protobuf = "^0.22.0"
autoflake = "^2.3.1"
blacken-docs = "^1.18.0"
isort = "^5.13.2"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest-asyncio = "^0.23.7"
pytest = "^8.2.1"
aiosqlite = "^0.20.0"
ipdb = "^0.13.13"
flake8 = "^7.1.0"
flake8-bugbear = "^24.4.26"
flake8-comprehensions = "^3.15.0"
flake8-docstrings = "^1.7.0"
flake8-import-order = "^0.18.2"
black = "^24.4.2"
isort = "^5.13.2"
pylint = "^3.2.5"
mypy = "^1.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/integrations", "tests/unitary"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
